--- a/openslides/mediafiles/static/templates/mediafiles/slide_mediafile.html
+++ b/openslides/mediafiles/static/templates/mediafiles/slide_mediafile.html
@@ -1,6 +1,7 @@
 <div ng-controller="SlideMediafileCtrl" class="content fullscreen">
     <ng-pdf template-url="/static/templates/mediafiles/slide_mediafile_partial.html"
         ng-attr-scale="{{ element.scale }}"
+		ng-attr-limitcanvasheight="1"
         ng-attr-page="{{ element.page }}">
     </ng-pdf>
 </div>
