--- a/openslides/core/static/templates/projector.html
+++ b/openslides/core/static/templates/projector.html
@@ -37,6 +37,12 @@
       margin-top: {{scroll}}em !important;
       font-size: {{scale}}%;
     }
+    .mediascrollcontent {
+      margin-top: {{scroll/2}}em !important;
+      -webkit-transform: scale({{scale/100}});
+      -ms-transform: scale({{scale/100}});
+      transform: scale({{scale/100}});
+    }
   </style>
   <div ng-repeat="element in elements | orderBy:'index'">
     <div ng-include="element.template"></div>
