--- a/openslides/mediafiles/static/templates/mediafiles/mediafile-form.html
+++ b/openslides/mediafiles/static/templates/mediafiles/mediafile-form.html
@@ -21,6 +21,13 @@
     <input type="text" ng-model="mediafile.title" class="form-control" name="inputTitle">
   </div>
 
+  <!-- private -->
+  <div class="checkbox" os-perms="mediafiles.can_see_private">
+      <label for="inputPrivate" translate>
+          <input type="checkbox" ng-model="mediafile.private" name="inputPrivate">Private
+      </label>
+  </div>
+
   <!-- uploader -->
   <div os-perms="mediafiles.can_manage" class="form-group">
     <label for="inputTitle" translate>Uploaded by</label>
