--- a/openslides/motions/static/templates/motions/motion-block-list.html
+++ b/openslides/motions/static/templates/motions/motion-block-list.html
@@ -10,7 +10,7 @@
         <translate>New</translate>
       </a>
     </div>
-    <h1 translate>Motion blocks</h1>
+    <h1 translate>Resolution blocks</h1>
   </div>
 </div>
 
@@ -27,7 +27,7 @@
       <tr>
         <th os-perms="core.can_manage_projector" class="minimum">
         <th><translate>Name</translate>
-        <th><translate>Motions</translate>
+        <th><translate>Resolutions</translate>
     <tbody>
       <tr ng-repeat="motionBlock in motionBlocks | filter: filter.search | orderBy: 'title'">
         <td os-perms="core.can_manage_projector">
