--- a/openslides/motions/static/templates/motions/slide_motion_block.html
+++ b/openslides/motions/static/templates/motions/slide_motion_block.html
@@ -2,7 +2,7 @@
   <!-- Title -->
   <div id="title">
     <h1>{{ motionBlock.agenda_item.getTitle() }}</h1>
-    <h2 translate>Motion block</h2>
+    <h2 translate>Resolution block</h2>
   </div>
 
   <!-- motion list -->
