--- a/openslides/motions/static/templates/motions/motion-form.html
+++ b/openslides/motions/static/templates/motions/motion-form.html
@@ -1,6 +1,6 @@
-<h1 ng-if="model.id" translate>Edit motion</h1>
-<h1 ng-if="!model.id && !parent" translate>New motion</h1>
-<h1 ng-if="parent"><translate>New amendment of motion</translate> {{ parent.identifier || parent.getTitle() }}</h1>
+<h1 ng-if="model.id" translate>Edit resolution</h1>
+<h1 ng-if="!model.id && !parent" translate>New resolution</h1>
+<h1 ng-if="parent"><translate>New amendment of resolution</translate> {{ parent.identifier || parent.getTitle() }}</h1>
 
 <div uib-alert ng-show="alert.show" ng-class="'alert-' + (alert.type || 'warning')" close="alert={}">
   {{ alert.msg }}
@@ -11,7 +11,7 @@
     <hr class="smallhr">
     <div class="checkbox pointer" ng-click="$parent.$parent.gotoDetailView = !$parent.$parent.gotoDetailView">
       <i class="fa" ng-class="$parent.$parent.gotoDetailView ? 'fa-check-square-o' : 'fa-square-o'"></i>
-      <translate>Open motion detail view after save.</translate>
+      <translate>Open resolution detail view after save.</translate>
     </div>
     <button type="submit" ng-disabled="motionForm.$invalid" class="btn btn-primary" translate>
       Save
