--- a/openslides/motions/static/templates/motions/motion-list.html
+++ b/openslides/motions/static/templates/motions/motion-list.html
@@ -11,7 +11,7 @@
       </a>
       <a ui-sref="motions.motionBlock.list" os-perms="motions.can_manage" class="btn btn-default btn-sm">
         <i class="fa fa-th-large fa-lg"></i>
-        <translate>Motion blocks</translate>
+        <translate>Resolution blocks</translate>
       </a>
       <a ui-sref="core.tag.list" os-perms="core.can_manage_tags" class="btn btn-default btn-sm">
         <i class="fa fa-tags fa-lg"></i>
@@ -22,7 +22,7 @@
         <translate>Import</translate>
       </a>
     </div>
-    <h1 translate>Motions</h1>
+    <h1 translate>Resolutions</h1>
   </div>
 </div>
 
@@ -126,18 +126,18 @@
       </a>
       <!-- delete button -->
       <a ng-show="selectedAction == 'delete'"
-        ng-bootbox-confirm="{{ 'Are you sure you want to delete all selected motions?' | translate }}"
+        ng-bootbox-confirm="{{ 'Are you sure you want to delete all selected resolutions?' | translate }}"
         ng-bootbox-confirm-action="deleteMultiple()"
         class="btn btn-default btn-sm btn-danger">
         <i class="fa fa-trash fa-lg"></i>
-        <translate>Delete selected motions</translate>
+        <translate>Delete selected resolutions</translate>
       </a>
     </div>
   </div>
 
   <div class="spacer-top-lg italic">
     {{ motionsFiltered.length }} /
-    {{ motions.length }} {{ "motions" | translate }}<span ng-if="(motions|filter:{selected:true}).length > 0">,
+    {{ motions.length }} {{ "resolutions" | translate }}<span ng-if="(motions|filter:{selected:true}).length > 0">,
     {{(motions|filter:{selected:true}).length}} {{ "selected" | translate }}</span>
   </div>
 
